resolved the issue with Glade warnings Connected the second find button so that it now searches for directions Created function to update ETA and distance text in the map Currently working on correctly displaying directions without overflowing

--- a/style.css
+++ b/style.css
@@ -65,6 +65,6 @@
 }
 .direction{
 	font-family: Roboto;
-	font-size: 15px;
+	font-size: 12px;
 	color: black;
 }
